# cellular_physics

./: CMakeLists.txt  README.md
include/: cell.h  config.h  render.h
src/: cell.c  cellular_physics.c  main.c  render.c
